fix spacing in mobile

--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ h2 {
   color: var(--black-color);
 }
 
-#forests article h1 {
+#forests h1 {
   line-height: 1.1;
   margin-bottom: 1.5rem;
 }
@@ -174,6 +174,7 @@ h2 {
 
 .footer .footer-inner p {
   padding: 0.2rem 0;
+  font-size: 0.8rem;
 }
 
 .footer .footer-inner h2 {
@@ -211,18 +212,20 @@ h2 {
     line-height: 1.1;
   }
   #forests {
-    padding: 2.2rem;
+    padding: 0.5rem 2.2rem;
   }
   #forests h1 {
     line-height: 1.2;
     font-size: 3rem;
+    margin-bottom: 0;
   }
   #forests article {
-    margin: 3rem 0 3rem 0;
+    margin: 2.3rem 0 3rem 0;
   }
   #forests article h2 {
     line-height: 1.3;
     font-size: 1.4rem;
+    margin-top: 0;
     margin-bottom: 0.7rem;
   }
   #forests article h3 {
